fix badge behavior on iphone 8

--- a/imports/plugins/included/default-theme/client/styles/products/childVariant.less
+++ b/imports/plugins/included/default-theme/client/styles/products/childVariant.less
@@ -27,8 +27,9 @@
   padding: 10px;
 
   @media only screen and (max-width: @screen-xs) {
-    max-width: 50%;
-    width: 50%;
+    max-width: 47.5%;
+    width: 47.5%;
+    justify-content: space-between;
   }
 }
 
